<resources>
    <string name="app_name">Personal Tutor App</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_sign_in_option">Sign in with your social media: </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_student">Sign up for student</string>
    <string name="action_sign_up_tutor">Register as a verified tutor</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_login">This username or password is incorrect</string>
    <string name="error_connection">Please check your internet connection</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_permission">Your account do not have permission to use this app. Please contact our customer services. </string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to register student -->
    <string name="title_activity_student_register">Student Registration</string>
    <string name="prompt_register_describe">Enter your personal information to continue:</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_dob">Date of Birth (DD-MM-YYYY)</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_student_agree">By clicking the sign up button, I agree to register as a student, and I understand that the authority of Personal Tutor App would have the final say.</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_confirm_password">The password is not matched. </string>
    <string name="error_invalid_email_address">The email is invalid. </string>
    <string name="error_invalid_names">The name is invalid. </string>

    <!-- Strings related to register tutor -->
    <string name="title_activity_tutor_register">Tutor Registration</string>
    <string name="prompt_subject">Subject</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_postcode">Postcode</string>
    <string name="prompt_education">Education</string>
    <string name="title_activity_main">Tutor Registration</string>
    <string name="prompt_tutor_agree">By clicking the sign up button, I agree to register as a tutor, and I understand that the authority of Personal Tutor App would have the final say.</string>

    <!-- Strings related to Student Main -->
    <string name="title_student_portal">Student Portal</string>
    <string name="action_logout">Logout</string>
    <string name="action_my_profile">My Profile</string>
    <string name="action_my_unread_msg">Unread Messages</string>
    <string name="title_search_portal">Search a tutor</string>

    <string name="title_tutor_portal">Tutor Portal</string>


    <!-- Strings related to Admin Main -->
    <string name="title_admin_portal">Admin Portal</string>
    <string name="title_tutor_application_requests">Tutor Application Requests</string>
    <string name="action_manage_category">Manage Tutor Categories</string>
    <string name="action_search">Search</string>
    <string name="prompt_search_tutor">Enter a Tutor name</string>
    <string name="action_add_subject">Add Subjects</string>
    <string name="action_change_subject">Change Subjects</string>


    <string-array name="education_array">
        <item>Primary School</item>
        <item>Middle School</item>
        <item>High School</item>
        <item>Bachelor</item>
        <item>Master</item>
        <item>Doctor</item>
    </string-array>
</resources>
