<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ADD8E6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:id="@+id/username_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/icon_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:src="@mipmap/icon_banner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textVisiblePassword|textNoSuggestions"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:textColor="#F00"
                android:id="@+id/txt_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/username_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in_short"
                android:textStyle="bold" />

            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/prompt_sign_in_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:onClick="loginUsingExternal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@null"
                    android:src="@mipmap/google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageButton
                    android:onClick="loginUsingExternal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@null"
                    android:src="@mipmap/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageButton
                    android:onClick="loginUsingExternal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@null"
                    android:src="@mipmap/twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageButton
                    android:onClick="loginUsingExternal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@null"
                    android:src="@mipmap/wechat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageButton
                    android:onClick="loginUsingExternal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@null"
                    android:src="@mipmap/line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <LinearLayout
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="#000"
                    android:id="@+id/sign_up_student"
                    android:onClick="signupStudent"
                    android:clickable="true"
                    android:text="@string/action_sign_up_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:textColor="#000"
                    android:id="@+id/sign_up_tutor"
                    android:onClick="signupTutor"
                    android:clickable="true"
                    android:text="@string/action_sign_up_tutor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>





        </LinearLayout>
    </ScrollView>
</LinearLayout>